--- a/templates/challenges/overview.html
+++ b/templates/challenges/overview.html
@@ -12,21 +12,26 @@
         <a class="btn-primary" href="/challenges/search">New Challenge</a>
     </div>
     {%for id, first_score, second_score, first_user, second_user, date in challenges%}
-    <div class="entry3 entry">
-        <div class="container-horizontal container-horizontal-mobile mobile-center">
-            <p>{{first_user}}</p>
-            <p class="font-marker margin-lr"> vs. </p>
-            <p>{{second_user}}</p>
-        </div>
-        <p>Score: {{first_score}} : {{second_score}}</p>
-        <div class="container-horizontal align-content-right">
-            <p class="margin-lr">Expires: {{date}}</p>
-            <form action="/challenges/details" method="GET">
-                <input type="hidden" name="challenge_id" value={{id}}>
-                <button type="submit"  class="btn-text">Details</button>
-            </form>
-        </div>
-    </div>
+    <form action="/challenges/details" method="GET" id='{{first_user}}{{second_user}}{{date}}{{id}}'  style="width: 100%;">
+        <div class="entry3 entry" onClick="document.getElementById('{{first_user}}{{second_user}}{{date}}{{id}}').submit();">
+            <div class="container-horizontal container-horizontal-mobile mobile-center" >
+                <p class="underline">{{first_user}}</p>
+                <p class="font-marker margin-lr"> vs. </p>
+                <p class="underline">{{second_user}}</p>
+            </div>
+            <div>   
+                <p class="underline">Score: {{first_score}} : {{second_score}}</p>
+            </div>
+           
+            <div class="container-horizontal align-content-right">
+                <p class="margin-lr">Expires: {{date}}</p>
+                
+                    <input type="hidden" name="challenge_id" value={{id}}>
+                    <button type="submit"  class="btn-text underline">Details</button>
+            
+            </div>
+        </div> 
+    </form>
     {%endfor%}
 
 
@@ -36,21 +41,23 @@
     </div>
     {% endif %}
     {% for name in incoming_requests %}
-    <div class="entry2 entry">
-        <div class="align-content-left">
-            <p>{{name}}</p>
+    <form method="GET" action="/profile" id="challenge_request{{name}}" style="width: 100%;">
+        <div class="entry2 entry" onClick="document.getElementById('challenge_request{{name}}').submit();">
+            <div class="align-content-left">
+                <p class="underline">{{name}}</p>
+            </div>
+            <div class="container-horizontal align-content-right">
+                <form action="/challenges/accept" method="POST">
+                    <input type="hidden" name="username" value="{{name}}" > 
+                    <button type="submit" class="btn-text margin-lr underline">Bestätigen</button>
+                </form>
+                <form action="/challenges/decline" method="POST">
+                    <input type="hidden" name="username" value="{{name}}" > 
+                    <button type="submit" class="btn-text underline">Ablehnen</button>
+                </form>
+            </div>
         </div>
-        <div class="container-horizontal align-content-right">
-            <form action="/challenges/accept" method="POST">
-                <input type="hidden" name="username" value="{{name}}" > 
-                <button type="submit" class="btn-text margin-lr">Bestätigen</button>
-            </form>
-            <form action="/challenges/decline" method="POST">
-                <input type="hidden" name="username" value="{{name}}" > 
-                <button type="submit" class="btn-text">Ablehnen</button>
-            </form>
-        </div>
-    </div>
+    </form>
     {% endfor %}
 
 
@@ -60,11 +67,13 @@
     </div>
     {% endif %}
     {% for name in pending_requests %}
-    <div class="entry2 entry">
-        <div class="align-content-left">
-            <p>{{name}}</p>
+    <form method="GET" action="/profile" id="challenge_request{{name}}" style="width: 100%;">
+        <div class="entry2 entry" onClick="document.getElementById('challenge_request{{name}}').submit();">
+            <div class="align-content-left">
+                <p class="underline">{{name}}</p>
+            </div>
         </div>
-    </div>
+    </form>
     {% endfor %}
 
     <a class="btn-primary margin half-size" href="/challenges/history">View Challenge History</a>
