--- a/templates/challenges/searchResults.html
+++ b/templates/challenges/searchResults.html
@@ -8,19 +8,22 @@
 {% block main %}
 <div class="container">
     {%for result in results %}
-        <div class="entry2 entry">
+    <form method="GET" action="/profile" id="challenge_request{{result.username}}" style="width: 100%;">
+        <input type="hidden" name="username" value="{{result.username}}" > 
+        <div class="entry2 entry" onClick="document.getElementById('challenge_request{{result.username}}').submit();">
             <div class="align-content-left">
-                <p>{{result.username}}</h2>
+                <p class="underline">{{result.username}}</h2>
             </div>
             <div class="align-content-right">
                 <form action="/challenges/search/results" method="POST">
                     <div class="textfield">
                         <input type="hidden" name="username" value="{{result.username}}" >
                     </div>
-                    <button class="btn-text " type="submit" >Send Request</button>
+                    <button class="btn-text underline" type="submit" >Send Request</button>
                 </form>
             </div>
         </div>
+    </form>
     {%endfor%}
 </div>
 {% endblock %}
