--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -14,23 +14,28 @@
        
         {% for task in tasks %}
             <!-- There are the following fields in every task that are helpful: name and due date -->
-            <div class="entry3 entry">
-                <div class="align-content-left">
-                    <p>{{task.name}}</p>
+            <form method="GET" action="/tasks/edit" style="width: 100%" id="{{task.id}}">
+                <div class="entry3 entry" onClick="document.getElementById('{{task.id}}').submit();">
+                    <div class="align-content-left">
+                        <p class="underline">{{task.name}}</p>
+                    </div>
+                    <!-- Currently it is possible that there is no due date -->
+                    <div>   
+                        <p class="underline">Due: {{task.due}}</p>
+                    </div>
+                   
+                    <div class="container-horizontal align-content-right">
+                        <form method="POST" action="/tasks">
+                            <input type="hidden" value={{task.id}} name="id">
+                            <button class="btn-text margin-lr underline" type="submit">Erledigt</button>
+                        </form>
+                        <form method="GET" action="/tasks/edit">
+                            <input type="hidden" value={{task.id}} name="id">
+                            <button class="btn-text check margin-lr" type="submit">✓</button>
+                        </form>
+                    </div>
                 </div>
-                <!-- Currently it is possible that there is no due date -->
-                <p>Due: {{task.due}}</p>
-                <div class="container-horizontal align-content-right">
-                    <form method="POST" action="/tasks">
-                        <input type="hidden" value={{task.id}} name="id">
-                        <button class="btn-text margin-lr" type="submit">Erledigt</button>
-                    </form>
-                    <form method="GET" action="/tasks/edit">
-                        <input type="hidden" value={{task.id}} name="id">
-                        <button class="btn-text" type="submit">Edit</button>
-                    </form>
-                </div>
-            </div>
+            </form>
         {% endfor %}
     </div>
     
