--- a/templates/login.html
+++ b/templates/login.html
@@ -15,5 +15,5 @@
         </div>
         <button id="login-btn" class="btn-primary" type="submit">Log In</button>
     </form>
-    <a class="btn-text"  href="/register">Registrieren</a>
+    <a class="btn-text" id="red" href="/register">Registrieren</a>
 {% endblock %}
