--- a/templates/register.html
+++ b/templates/register.html
@@ -21,5 +21,5 @@
         </div>
         <button id="login-btn" class="btn btn-primary" type="submit">Register</button>
     </form>
-    <a class="btn-text" href="/login">Login</a>
+    <a class="btn-text" id="red" href="/login">Login</a>
 {% endblock %}
