--- a/templates/challenges/history.html
+++ b/templates/challenges/history.html
@@ -29,6 +29,6 @@
         </div>
     </form>
     {%endfor%}
-    <a class="btn-primary half-size btn-font" href="/challenges">Challenges</a>
+    <a class="btn-primary half-size" href="/challenges"><p class="underline" >Challenges</p></a>
 </div>
 {% endblock %}
