--- a/templates/challenges/search.html
+++ b/templates/challenges/search.html
@@ -10,6 +10,6 @@
         <div class="textfield">
             <input type="text" name="username" placeholder="Username">
         </div>
-        <button class="btn-primary" id="login-btn" type="submit">Suchen</button>
+        <button class="btn-primary" id="login-btn" type="submit"><p class="underline" >Suchen</p></button>
     </form>
 {% endblock %}
