--- a/templates/friends/search.html
+++ b/templates/friends/search.html
@@ -10,6 +10,6 @@
         <div class="textfield">
             <input placeholder="Username" name="username" type="text">
         </div>
-        <button type="submit" id="login-btn" class="btn-primary">Suchen</button>
+        <button type="submit" id="login-btn" class="btn-primary"><p class="underline" >Suchen</p></button>
     </form>
 {% endblock %}
