--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         </a>
     </form>
     {% endfor %}
-    <a class="btn-text" href="/tasks">View All Tasks</a>
+    <a class="btn-text" href="/tasks"><p class="underline primary-color">View All Tasks</p></a>
     {% endif %}
 
     {%if friends %}
@@ -52,7 +52,7 @@
         </div>
     </form>
     {% endfor %}
-    <a class="btn-text" href="/friends">View All Friends</a>
+    <a class="btn-text" href="/friends"><p class="underline primary-color">View All Friends</p></a>
     {% endif %} 
 
     {%if challenges %}
@@ -79,7 +79,7 @@
         </div>            
     </form>
     {%endfor%}
-    <a class="btn-text" href="/challenges">View All Challenges</a>
+    <a class="btn-text" href="/challenges"><p class="underline primary-color">View All Challenges</p></a>
     {% endif %}
 
 
@@ -104,7 +104,7 @@
         </div>
     </form>
     {% endfor %}
-    <a class="btn-text" href="/friends">View All Requests</a>
+    <a class="btn-text" href="/friends"><p class="underline primary-color">View All Requests</p></a>
     {% endif %}
 
 
@@ -129,7 +129,7 @@
         </div>
     </form>
     {% endfor %}
-    <a class="btn-text" href="/challenges">View All Challenges</a>
+    <a class="btn-text" href="/challenges"><p class="underline primary-color">View All Challenges</p></a>
     {% endif %}
     
 </div>
