--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         <div class="textfield">
             <input class="form-control" name="password" placeholder="Password" type="password" >
         </div>
-        <button id="login-btn" class="btn-primary" type="submit">Log In</button>
+        <button class="btn-primary" type="submit" id="login-btn"><p class="underline" id="login-p">Log In</p></button>
     </form>
-    <a class="btn-text" id="red" href="/register">Registrieren</a>
+    <a class="btn-text"  href="/register"><p class="underline primary-color" id="red">Registrieren</p></a>
 {% endblock %}
