--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
         <div class="textfield">
             <input class="form-control" name="confirmation" placeholder="Confirm Password" type="password">
         </div>
-        <button id="login-btn" class="btn btn-primary" type="submit">Register</button>
+        <button id="login-btn" class="btn btn-primary" type="submit"><p class="underline" >Register</p></button>
     </form>
-    <a class="btn-text" id="red" href="/login">Login</a>
+    <a class="btn-text" href="/login"><p class="underline" id="red" >Login</p></a>
 {% endblock %}
