--- a/templates/tasks/add.html
+++ b/templates/tasks/add.html
@@ -16,6 +16,6 @@
         <div class="textfield">
             <input type="date" name="due" placeholder="Fälligkeitsdatum">
         </div>
-        <button class="btn-primary" id="login-btn" type="submit">Add Task</button>
+        <button class="btn-primary" id="login-btn" type="submit"><p class="underline" >Add Task</p></button>
     </form>
 {% endblock %}
