--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -19,6 +19,6 @@
         <div class="textfield">
             <input type="hidden" name="id" value={{task.id}}>
         </div>
-        <button class="btn-primary" id="login-btn" type="submit">Edit Task</button>
+        <button class="btn-primary" id="login-btn" type="submit"><p class="underline" >Edit Task</p></button>
     </form>
 {% endblock %}
