--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -12,6 +12,6 @@
         <div class="textfield"><input type="password" placeholder="Bestätige neues Password" name="confirm_password" /></div>
         <div class="textfield"><input type="password" placeholder="Aktuelles Password" name="current_password" /></div>
         <div class="textfield"><input type="username" placeholder="Neuer Username" name="username" /></div>
-        <button class="btn-primary half-size btn-font" type="submit" >Submit</button>
+        <button class="btn-primary half-size btn-font" type="submit" ><p class="underline" >Submit</p></button>
     </form>
 {% endblock %}
