--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -25,13 +25,14 @@
                     </div>
                    
                     <div class="container-horizontal align-content-right">
-                        <form method="POST" action="/tasks">
-                            <input type="hidden" value={{task.id}} name="id">
-                            <button class="btn-text margin-lr underline" type="submit">Erledigt</button>
-                        </form>
+                        
                         <form method="GET" action="/tasks/edit">
                             <input type="hidden" value={{task.id}} name="id">
-                            <button class="btn-text check margin-lr" type="submit">✓</button>
+                            <button class="btn-text margin-lr underline" type="submit">Edit</button>
+                        </form>
+                        <form method="POST" action="/tasks">
+                            <input type="hidden" value={{task.id}} name="id">
+                            <button class="btn-text margin-lr check" type="submit">✓</button>
                         </form>
                     </div>
                 </div>
