added the categorie to the tasks overview

--- a/static/css/start.css
+++ b/static/css/start.css
@@ -358,6 +358,12 @@ select:focus {
   outline: none;
 }
 
+.info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .textfield input {
   margin-bottom: 10px;
   font-size: 1.5em;
