--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -20,8 +20,10 @@
                         <p class="underline">{{task.name}}</p>
                     </div>
                     <!-- Currently it is possible that there is no due date -->
-                    <div>   
-                        <p class="underline">Due: {{task.due}}</p>
+                    <div class="info-container">   
+                       
+                        <p class="underline ">Categorie: {{task.categorie}}</p>
+                        <p class="underline " style="text-align: left;">Due: {{task.due}}</p>
                     </div>
                    
                     <div class="container-horizontal align-content-right">
